# github-error-investigator

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
infra/: github-actions-example.yml
src/: main.py
src/agent/: github_mcp.py  investigator.py
src/api/: server.py
src/models/: daily_report_payload.py  error_payload.py  pr_risk_payload.py  repo_activity_payload.py
